<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:background="@color/garnet"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="2"
        android:contentDescription="@string/description_main_logo"
        android:foregroundGravity="center"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_uottawa"
        app:tint="#000000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1" />

    <androidx.cardview.widget.CardView

        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="5"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/gallery_grey"
        app:cardCornerRadius="20sp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:gravity="fill_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_input"

                android:layout_width="fill_parent"
                android:layout_height="50sp"
                android:layout_margin="5sp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="material"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="@string/prompt_username"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/password_input"
                android:layout_width="fill_parent"
                android:layout_height="50sp"
                android:layout_margin="5sp"
                android:layout_weight="1"
                app:errorEnabled="false"
                app:errorIconTintMode="src_atop"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/log_in_button"
                android:layout_width="fill_parent"
                android:layout_height="50sp"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="@string/action_log_in"
                android:textAllCaps="false"
                app:cornerRadius="20sp"
                app:strokeColor="@color/white"
                app:strokeWidth="2sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                android:layout_width="fill_parent"
                android:layout_height="50sp"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="@string/action_sign_up"
                android:textAllCaps="false"
                app:cornerRadius="20sp"
                app:strokeColor="@color/white"
                app:strokeWidth="2sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>