<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="48dp"
        android:layout_height="44dp"
        android:layout_margin="20sp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_close_button"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/presence_offline" />


    <androidx.cardview.widget.CardView

        android:id="@+id/cardView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="5sp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/gallery_grey"
        app:cardCornerRadius="20dp"
        app:cardElevation="0sp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_button">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_input"

                android:layout_width="fill_parent"
                android:layout_height="0sp"
                android:layout_margin="10sp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="material"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="@string/prompt_username"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/account_type_menu"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="fill_parent"
                android:layout_height="0sp"
                android:layout_margin="10sp"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/account_type_dropdown"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:hint="@string/prompt_account_type"
                    android:inputType="none"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/name_input"
                android:layout_width="fill_parent"
                android:layout_height="0sp"
                android:layout_margin="10sp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="material"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="@string/prompt_full_name"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout


                android:id="@+id/email_input"
                android:layout_width="fill_parent"
                android:layout_height="0sp"
                android:layout_margin="10sp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText

                    style="material"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="@string/prompt_email"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/password_input"
                android:layout_width="fill_parent"
                android:layout_height="0sp"
                android:layout_margin="10sp"
                android:layout_weight="1"
                app:layout_constraintTop_toBottomOf="@+id/username_input"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="fill_parent"
                android:layout_height="0sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/description_main_logo"
                android:scaleX="0.5"
                android:scaleY="0.5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_uottawa"
                app:tint="@color/black" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:layout_margin="20sp"
        android:text="@string/action_sign_up"
        android:textAllCaps="false"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="2sp" />

</androidx.constraintlayout.widget.ConstraintLayout>