<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:contentDescription="@string/description_main_logo"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_gravity="center"

        android:layout_weight="2"
        android:padding="24sp"
        android:src="@drawable/ic_uottawa"
        app:srcCompat="@drawable/ic_uottawa"
        app:tint="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:autoSizeTextType="uniform"
        android:gravity="bottom|center"
        android:text="@string/welcome_prefix"
        android:textAppearance="?attr/textAppearanceHeadline2" />

    <TextView
        android:id="@+id/user_name_field"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:autoSizeTextType="uniform"
        android:gravity="center|top"
        android:text="User Name"
        android:textAppearance="?attr/textAppearanceHeadline3" />

    <TextView
        android:id="@+id/user_type_field"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeTextType="uniform"
        android:gravity="center|top"
        android:text="User type"
        android:textAppearance="?attr/textAppearanceCaption" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/home_tutorial"
        android:textAppearance="?attr/textAppearanceHeadline4" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</androidx.appcompat.widget.LinearLayoutCompat>